[package]
name = "clap-md"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/clap-md"
documentation = "https://docs.rs/clap-md"
description = "Generate Markdown documentation for clap application definitions"
readme = "README.md"

[dependencies]
clap = "3.1.8"
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.1"
